//
// Protocol buffers definition
//
syntax = "proto3";
package pt.ulisboa.tecnico.sirs.contracts.grpc;

option java_multiple_files = true;

import "generic.proto";

service WebserverBackofficeService {
  rpc getCompartmentKey(GetCompartmentKeyRequest) returns (GetCompartmentKeyResponse);
  rpc ackCompartmentKey(AckCompartmentKeyRequest) returns (AckCompartmentKeyResponse);
}

message AckCompartmentKeyRequest {
  string clientEmail = 1;
  CompartmentType compartment = 2;
}

message AckCompartmentKeyResponse {
}

message GetCompartmentKeyRequest {
  message RequestData {
    string username = 1;
    RoleType role = 2;
    CompartmentType compartment = 3;
    bytes certificate = 4;
  }
  RequestData data = 2;
  bytes signature = 3;
  Ticket ticket = 4;
  bytes signatureRBAC = 5;
  string clientEmail = 6; // to generate temporary secret key
}

message GetCompartmentKeyResponse {
  bytes key = 1;
}